--- a/public/assets/css/default/main.css
+++ b/public/assets/css/default/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* 
     CSS VARIABLES 
 
@@ -26,8 +25,8 @@
 /* Color RGB Components */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=PT+Serif:wght@700&display=swap");
 :root {
-  --clr-primary: #336699;
-  --clr-primary-rgb: 51, 102, 153;
+  --clr-primary: #7ecdc9;
+  --clr-primary-rgb: 126, 205, 201;
   --clr-primary-dark: #264d73;
   --clr-primary-dark-rgb: 38, 77, 115;
   --clr-primary-light: #6699cc;
@@ -40,8 +39,8 @@
   --clr-dark-text-rgb: 51, 51, 51;
   --clr-white: white;
   --clr-white-rgb: 255, 255, 255;
-  --clr-black: #333333;
-  --clr-black-rgb: 51, 51, 51;
+  --clr-black: #373737;
+  --clr-black-rgb: 55, 55, 55;
   --clr-grey-dark: #4d4d4d;
   --clr-grey-dark-rgb: 77, 77, 77;
   --clr-grey-medium: #cccccc;
@@ -58,7 +57,7 @@
   --ts: 0 2px 5px rgba(51, 51, 51, 0.18);
   --section-margin: 0rem;
   /*  Navigation Styles */
-  --nav-height: 60px;
+  --nav-height: 120px;
   --nav-bg: #336699;
   --nav-bg-opacity: 0;
   --nav-text: white;
@@ -69,13 +68,13 @@
   /* Media Queries */
   --breakpoint: 768px;
   /* Font Families */
-  --ff-serif: PT Serif, serif;
-  --ff-sans: Open Sans, sans-serif;
+  --ff-serif: serif;
+  --ff-sans: Poppins, sans-serif;
   /* Font Weights */
-  --fw-l: 400;
+  --fw-l: 300;
   --fw-n: 400;
   --fw-m: 600;
-  --fw-b: 700;
+  --fw-b: 600;
 }
 
 :root {
@@ -204,7 +203,7 @@ h6 {
 }
 
 main {
-  padding: calc(60px * 1.5) 0;
+  padding: calc(120px * 1.5) 0;
 }
 
 .container {
@@ -236,6 +235,28 @@ main {
 
 .span {
   grid-column: 1/-1 !important;
+}
+
+.chicken1SVG {
+  position: absolute;
+  right: 0.5em;
+  bottom: 0;
+  width: clamp(2rem, 10vw, 5rem);
+}
+
+.wooHooSVG {
+  position: fixed;
+  z-index: -1;
+  bottom: 0;
+  right: 0.5em;
+  height: 20%;
+}
+
+.headerSVG {
+  position: absolute;
+  right: 0;
+  bottom: 0px;
+  height: clamp(2rem, 20vw, 4rem);
 }
 
 .btn {
@@ -278,12 +299,12 @@ main {
   transition: 220ms all ease-in-out;
 }
 .btn-cta:hover, .btn-cta:active {
-  background-color: #4785c2;
+  background-color: #98d7d4;
 }
 .btn-cta:focus {
   outline-style: dashed;
   outline-color: transparent;
-  box-shadow: 0 0 0 4px #8cb3d9;
+  box-shadow: 0 0 0 4px #bfe6e4;
 }
 
 .btn-link {
@@ -573,203 +594,140 @@ textarea:focus {
   top: 0px;
 }
 
-/* Navigation Styles w/sub navigation dropdown and responsive toggles */
-.navbar {
-  padding-right: 1em;
-  padding-left: 1em;
-  background: #264d73;
-  color: #fff;
-  height: 60px;
-  line-height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1000;
-}
-.navbar .logo {
-  flex: 1;
-  white-space: nowrap;
-}
-.navbar .logo a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 2rem;
-  padding: 0;
-  margin: 0;
-  height: 60px;
-  line-height: 60px;
-}
-.navbar .nav {
-  background: #4080bf;
-  color: #fff;
-  white-space: nowrap;
-  text-align: center;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
-  transform: scaleY(0);
-  opacity: 0;
-  transition: transform 0.2s ease, opacity 250ms ease-out;
-  transform-origin: top;
-}
-@media screen and (min-width: 768px) {
-  .navbar .nav {
-    background: unset;
-    display: flex;
-    flex-flow: row nowrap;
-    transform: scaleY(1);
-    opacity: 1;
-    position: static;
-    width: auto;
-  }
-}
-.navbar .nav-link {
-  list-style: none;
+header {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  background: #7ecdc9;
+  height: calc(120px + 4em);
   position: relative;
-  font-size: 1.5rem;
-  font-weight: 400;
-  letter-spacing: 1px;
 }
-@media screen and (min-width: 768px) {
-  .navbar .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
-    height: 60px;
-    line-height: 60px;
-    font-size: 1rem;
-  }
-}
-.navbar .nav-link:hover {
-  background: #204060;
-}
-.navbar .nav a {
-  text-decoration: none;
-  color: #fff;
-  display: block;
-}
-.navbar .toggle-label {
-  color: #fff;
-  cursor: pointer;
-  font-size: inherit;
-  display: block;
-}
-.navbar .toggle-label::after {
-  content: "▼";
-  font-size: 0.7em;
-}
-.navbar .subnav {
-  width: 100%;
-  background: #538cc6;
-  transform: scaleY(0);
-  height: 0;
-}
-@media screen and (min-width: 768px) {
-  .navbar .subnav {
-    white-space: nowrap;
-    width: auto;
-    display: block;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    transform: scaleY(0);
-    opacity: 0;
-    transition: transform 0.2s ease, opacity 0.4s ease-out;
-    transform-origin: top;
-  }
-}
-.navbar .subnav-link {
-  list-style: none;
+header .logo {
   text-align: center;
-  display: flex;
 }
-@media screen and (min-width: 768px) {
-  .navbar .subnav-link {
-    text-align: left;
-  }
+header img {
+  height: calc(120px + 2em);
+  display: inline-block;
 }
-.navbar .subnav-link:hover {
-  background: #264d73;
-  color: constrast-switch(#336699);
+
+.controls {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1em;
 }
-.navbar .subnav-link a {
+.controls a {
+  padding: 0.25em 0.5em;
+  background: #40a5a0;
+  color: white;
+  border-radius: 7px;
+  border: solid 1px #f2f2f2;
+  font-weight: 300;
   text-decoration: none;
-  width: 100%;
-  padding-right: 1rem;
-  padding-left: 1rem;
+  transition: all 125ms ease-in-out;
+}
+.controls a:hover {
+  background: #f9b52f;
+  color: #1c214f;
+  border-radius: 7px;
+  border: solid 1px #1c214f;
+}
+
+.navbar {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 300;
+  color: #1c214f;
+  background: white;
+  min-width: 30%;
+  max-width: 50%;
+  height: 100%;
+  box-shadow: 2px 0 12px 5px rgba(28, 33, 79, 0.15);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 102;
+  transform: translateX(-105%);
+  transition: all 125ms ease;
+}
+.navbar ul {
+  list-style: none;
+  padding: 0;
+}
+.navbar li {
+  border-bottom: solid 1px #bebebe;
+}
+.navbar a {
+  text-decoration: none;
+  display: block;
+  color: #1c214f;
+  padding: 1rem;
+}
+.navbar a:hover {
+  background: #f9b52f;
+}
+
+.toggle:checked ~ .navbar {
+  transform: translateX(0);
+}
+
+.toggle-label {
+  background: #7ecdc9;
+  height: 4em;
+  width: 4em;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+.toggle-label span,
+.toggle-label span::before,
+.toggle-label span::after {
+  width: 2em;
+  height: 3px;
+  border-radius: 4px;
+  background: #1c214f;
+  position: relative;
+}
+.toggle-label span::before,
+.toggle-label span::after {
+  content: "";
+  position: absolute;
+  transform: rotate(0deg);
+  transition: transform 250ms ease;
+}
+.toggle-label span::before {
+  top: 10px;
+}
+.toggle-label span::after {
+  top: -10px;
 }
 
 .toggle {
   position: absolute;
-  left: -9999px;
-  top: -9999px;
+  top: -999px !important;
+  left: -9999px !important;
 }
 
-.toggle-label-hamburger {
-  margin: 0;
-  cursor: pointer;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  z-index: 100;
-  width: 60px;
-}
-@media screen and (min-width: 768px) {
-  .toggle-label-hamburger {
-    display: none;
-  }
-}
-.toggle-label-hamburger span,
-.toggle-label-hamburger span::before,
-.toggle-label-hamburger span::after {
-  width: calc(60px / 2);
-  height: 4px;
-  border-radius: 7px;
-  background: white;
-  position: relative;
-}
-.toggle-label-hamburger span::before,
-.toggle-label-hamburger span::after {
-  content: "";
-  position: absolute;
-  transform: rotate(0deg);
-  transition: transform 125ms ease;
-}
-.toggle-label-hamburger span::before {
-  top: 10px;
-}
-.toggle-label-hamburger span::after {
-  top: -10px;
+.toggle:checked ~ .toggle-label {
+  filter: drop-shadow(0 2px 2px rgba(28, 33, 79, 0.15));
+  left: 30%;
 }
 
-/* Toggle States */
-.toggle:checked ~ .subnav {
-  transform: scaleY(1);
-  opacity: 1;
-  height: auto;
-}
-
-.toggle:checked ~ .nav {
-  transform: scaleY(1);
-  opacity: 1;
-  min-height: calc(100vh - 60px);
-}
-
-.toggle:checked ~ .toggle-label-hamburger span {
+.toggle:checked ~ .toggle-label span {
   background: transparent;
 }
 
-.toggle:checked ~ .toggle-label-hamburger span::before {
+.toggle:checked ~ .toggle-label span::before {
   transform: rotate(135deg);
   top: 0px;
 }
 
-.toggle:checked ~ .toggle-label-hamburger span::after {
+.toggle:checked ~ .toggle-label span::after {
   transform: rotate(-135deg);
   top: 0px;
 }
@@ -778,11 +736,11 @@ textarea:focus {
   margin-top: auto;
   padding-top: 1rem;
   background: var(--clr-primary);
-  color: #fff;
+  color: #000;
   font-size: 0.9rem;
 }
 .footer a {
-  color: #fff;
+  color: #000;
   transition: all 125ms ease;
 }
 .footer a:hover {
@@ -828,7 +786,7 @@ textarea:focus {
   margin: 0;
   font-size: 0.8rem;
   font-weight: var(--fw-l);
-  color: #fff;
+  color: #000;
 }
 
 .pagination {
