--- a/structure/sass/default/global/_defaults.scss
+++ b/structure/sass/default/global/_defaults.scss
@@ -22,6 +22,7 @@ body {
 
 body {
   background-color: $bg;
+
   font-family     : var(--ff-sans);
   color           : contrast-switch($bg);
   font-weight     : 400;
@@ -151,4 +152,29 @@ main {
 
 .span {
   grid-column: 1 / -1 !important;
+}
+
+.chicken1SVG {
+  position: absolute;
+  right   : .5em;
+  bottom  : 0;
+  width: clamp(2rem, 10vw, 5rem);
+}
+.wooHooSVG {
+  position: fixed;
+  z-index: -1;
+  bottom: 0;
+  right: .5em;
+  height: 20%;
+
+}
+// header {
+//   overflow: hidden;
+//   box-shadow: 2px 0 15px rgba($clr-black, .15);
+// }
+.headerSVG {
+position: absolute;
+right: 0;
+bottom: 0px;
+height: clamp(2rem, 20vw, 4rem);
 }
