--- a/structure/sass/default/includes/_navbar.scss
+++ b/structure/sass/default/includes/_navbar.scss
@@ -1,232 +1,176 @@
-  /* Navigation Styles w/sub navigation dropdown and responsive toggles */  
+header {
+  @include padding(1em null);
+  background: $clr-primary;
+  height    : calc(#{$nav-height} + 4em);
 
-  .navbar {
-    @include padding(null 1em);
-    background : darken($clr-primary, 10%);
-    color      : contrast-switch($clr-primary);
-    height     : $nav-height;
-    line-height: $nav-height;
- 
-    display        : flex;
-    justify-content: space-between;
-    align-items    : center;
- 
-    position: fixed;
-    width   : 100%;
-    top     : 0;
-    z-index: 1000;
- 
-    .logo {
-      flex       : 1;
-      white-space: nowrap;
- 
-      a {
-        text-decoration: none;
-        color    : contrast-switch($clr-primary);
-        font-size: 2rem;
-        @include padding(0);
-        @include margin(0);
-        height     : $nav-height;
-        line-height: $nav-height;
-      }
-    }
- 
-    .nav {
-      background : lighten($clr-primary, 10%);
-      color      : contrast-switch($clr-primary);
-      white-space: nowrap;
-      text-align : center;
- 
-      position: absolute;
-      top     : 100%;
-      left    : 0;
-      right   : 0;
- 
-      transform       : scaleY($scale); //Set to zero for animation
-      opacity         : $scale; //Set to zero for animation
-      transition      : transform .2s ease, opacity 250ms ease-out;
-      transform-origin: top;
- 
-      @media screen and (min-width: $breakpoint) {
-        background: unset;
-        display   : flex;
-        flex-flow : row nowrap; 
- 
-        transform: scaleY(1); //Scale set to 1 for desktop navigation
-        opacity  : 1; //Opacity set to 1 for desktop navigation
-        position : static; //Position static for desktop navigation
-        width    : auto; //Width Auto to break subnav outside of parent
-      }
- 
-      &-link {
-        list-style: none;
-        position: relative;
-        font-size: 1.5rem;
-        font-weight: $fw-l;
-        letter-spacing: 1px;
- 
- 
- 
-        @media screen and (min-width: $breakpoint) {
-          @include padding(null .5rem);
-          height     : $nav-height;
-          line-height: $nav-height;
-          font-size: 1rem;
-        }
- 
-        &:hover {
-          background: darken($clr-primary, 15%);
-        }
-      }
- 
-      a {
-        text-decoration: none;
-        color: contrast-switch($clr-primary);
-        display: block;
-      }
-    }
- 
-    // Static placeholder for navigation with sub menu. Uses the checkbox/label trick to toggle
-    .toggle-label {
-      color : contrast-switch($clr-primary);
-      cursor: pointer;
-      font-size: inherit;
-    
-      display: block;
- 
- 
-      &::after {
-        content  : '\25bc';
-        font-size: .7em;
-      }
-    }
- 
-    .subnav {
-      width     : 100%;
-      background: lighten($clr-primary, 15%);
-      transform : scaleY($scale);
-      height    : 0; // Set height to 0 for mobile dropdown animation
- 
-      @media screen and (min-width: $breakpoint) {
-        white-space: nowrap;
-        width      : auto;
- 
-        display: block;
- 
-        position: absolute;
-        top     : 100%;
-        right    : 0;
- 
-        transform       : scaleY($scale);
-        opacity         : $scale;
-        transition      : transform .2s ease, opacity .4s ease-out;
-        transform-origin: top;
- 
-      }
- 
-      &-link {
-        list-style: none;
-        text-align: center;
-        display   : flex;
- 
-        @media screen and (min-width: $breakpoint) {
-          text-align: left;
-        }
- 
-        &:hover {
-          background: darken($clr-primary, 10%);
-          color     : constrast-switch($clr-primary);
-        }
- 
-        a {
-          text-decoration: none;
-          width: 100%;
-          @include padding(null 1rem);
-        }
-      }
-    }
+  position: relative;
+
+  .logo {
+    text-align: center;
   }
- 
-  // Hide Checkbox associated with toggle menus
-  .toggle {
-    position: absolute;
-    left    : -9999px;
-    top     : -9999px;
+
+  img {
+    height : calc(#{$nav-height} + 2em);
+    display: inline-block;
   }
- 
-  // Toggle Hamburger Hidden on Desktop
-  .toggle-label-hamburger {
-    @include margin(0);
-    cursor: pointer;
-    height: $nav-height;
- 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    z-index: 100;
-    width: $nav-height; 
- 
-  @media screen and (min-width: $breakpoint) { 
-      display: none;
-    }
-    span,
-    span::before,
-    span::after {
-      width        : calc(#{$nav-height} / 2);
-      height       : 4px;
+}
+
+.controls {
+  position: absolute;
+  top     : 1em;
+  right   : 1em;
+
+  display              : grid;
+  grid-template-columns: 1fr 1fr;
+  gap                  : 1em;
+
+  a {
+    @include padding(.25em .5em);
+    background     : darken($clr-primary, 20%);
+    color          : $clr-white;
+    border-radius  : 7px;
+    border         : solid 1px hsl(0, 0%, 95%);
+    font-weight    : $fw-l;
+    text-decoration: none;
+
+    transition: all 125ms ease-in-out;
+
+    &:hover {
+      background   : $clr-yellow;
+      color        : $clr-blue;
       border-radius: 7px;
-      background   : white;
-      position     : relative;
+      border       : solid 1px $clr-blue;
     }
- 
-    span::before,
-    span::after {
-      content   : '';
-      position  : absolute;
-      transform : rotate(0deg);
-      transition: transform 125ms ease;
+  }
+}
+
+.navbar {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: $fw-l;
+  color      : $clr-blue;
+  background : $clr-white;
+  min-width  : 30%;
+  max-width  : 50%;
+  height     : 100%;
+
+  box-shadow: 2px 0 12px 5px rgba($clr-blue, .15);
+
+  position: absolute;
+  top     : 0;
+  left    : 0;
+  z-index : 102;
+
+  transform : translateX(-105%);
+  transition: all 125ms ease;
+
+  ul {
+    list-style: none;
+    @include padding(0);
+  }
+
+  li {
+    border-bottom: solid 1px rgb(190, 190, 190);
+  }
+
+  a {
+
+    text-decoration: none;
+    display        : block;
+    color          : $clr-blue;
+    @include padding(1rem);
+
+    &:hover {
+      background: $clr-yellow;
     }
- 
-    span::before {
-      top: 10px;
-    }
- 
-    span::after {
-      top: -10px;
-    }
- 
   }
- 
-  /* Toggle States */
-  .toggle:checked~.subnav {
-    transform: scaleY(1);
-    opacity  : 1;
-    height   : auto;
+}
+
+.toggle:checked~.navbar {
+  transform: translateX(0);
+}
+
+// Toggle Hamburger Hidden on Desktop
+.toggle-label {
+  background: $clr-primary;
+
+
+  height: 4em;
+  width : 4em;
+  cursor: pointer;
+
+  display        : flex;
+  align-items    : center;
+  justify-content: center;
+
+  position: absolute;
+  top     : 0;
+  left    : 0;
+  z-index : 100;
+
+
+  span,
+  span::before,
+  span::after {
+    width        : 2em;
+    height       : 3px;
+    border-radius: 4px;
+    background   : $clr-blue;
+    ;
+    position: relative;
   }
- 
-  .toggle:checked~.nav {
-    transform: scaleY(1);
-    opacity  : 1;
-    min-height: calc(100vh - 60px);
+
+  span::before,
+  span::after {
+    content   : '';
+    position  : absolute;
+    transform : rotate(0deg);
+    transition: transform 250ms ease;
   }
- 
-  // Nav Toggle Animation
- 
-  .toggle:checked~.toggle-label-hamburger span {
-    background: transparent;
+
+  span::before {
+    top: 10px;
   }
- 
-  // .nav.scroll * .toggle:checked~.toggle-label-hamburger span {
-  //   background: transparent !important;
-  // }
- 
-  .toggle:checked~.toggle-label-hamburger span::before {
-    transform: rotate(135deg);
-    top      : -0px;
+
+  span::after {
+    top: -10px;
   }
- 
-  .toggle:checked~.toggle-label-hamburger span::after {
-    transform: rotate(-135deg);
-    top      : 0px;
-  }
+
+}
+
+// Hamburger
+
+// Hide checkboxes for toggles and remove from the document flow
+.toggle {
+  position: absolute;
+  top     : -999px !important;
+  left    : -9999px !important;
+}
+
+// Nav Toggle Label & Hamburger icon w/animation
+
+
+// Nav Toggle Animation
+.toggle:checked~.toggle-label {
+  filter: drop-shadow(0 2px 2px rgba($clr-blue, .15));
+
+  left: 30%;
+
+}
+
+.toggle:checked~.toggle-label span {
+  background: transparent;
+}
+
+// .nav.scroll * .nav-toggle:checked~.nav-toggle-label span {
+//   background: transparent !important;
+// }
+
+.toggle:checked~.toggle-label span::before {
+  transform: rotate(135deg);
+  top      : -0px;
+}
+
+.toggle:checked~.toggle-label span::after {
+  transform: rotate(-135deg);
+  top      : 0px;
+}
