--- a/structure/sass/default/global/_defaults.scss
+++ b/structure/sass/default/global/_defaults.scss
@@ -5,12 +5,13 @@
   box-sizing: border-box;
   @include margin(0);
   @include padding(0);
-  // -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
 }
 
 html {
   scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 html,
@@ -116,11 +117,6 @@ h6 {
   font-size: 1rem;
 }
 
-main {
-  // @include padding(#{$nav-height} null 2rem);
-  padding: calc(#{$nav-height} * 1.5) 0;
-}
-
 .container {
   @include margin(auto);
   width: 100%;
@@ -152,29 +148,4 @@ main {
 
 .span {
   grid-column: 1 / -1 !important;
-}
-
-.chicken1SVG {
-  position: absolute;
-  right   : .5em;
-  bottom  : 0;
-  width: clamp(2rem, 10vw, 5rem);
-}
-.wooHooSVG {
-  position: fixed;
-  z-index: -1;
-  bottom: 0;
-  right: .5em;
-  height: 20%;
-
-}
-// header {
-//   overflow: hidden;
-//   box-shadow: 2px 0 15px rgba($clr-black, .15);
-// }
-.headerSVG {
-position: absolute;
-right: 0;
-bottom: 0px;
-height: clamp(2rem, 20vw, 4rem);
 }
