--- a/structure/sass/default/includes/_navbar.scss
+++ b/structure/sass/default/includes/_navbar.scss
@@ -2,47 +2,50 @@ header {
   @include padding(1em null);
   background: $clr-primary;
   height    : calc(#{$nav-height} + 4em);
+  width: 100%;
 
   position: relative;
 
   .logo {
     text-align: center;
+    @include padding(null 4rem);
   }
 
   img {
     height : calc(#{$nav-height} + 2em);
     display: inline-block;
   }
-}
-
-.controls {
-  position: absolute;
-  top     : 1em;
-  right   : 1em;
-
-  display              : grid;
-  grid-template-columns: 1fr 1fr;
-  gap                  : 1em;
-
-  a {
-    @include padding(.25em .5em);
-    background     : darken($clr-primary, 20%);
-    color          : $clr-white;
-    border-radius  : 7px;
-    border         : solid 1px hsl(0, 0%, 95%);
-    font-weight    : $fw-l;
-    text-decoration: none;
-
-    transition: all 125ms ease-in-out;
-
-    &:hover {
-      background   : $clr-yellow;
-      color        : $clr-blue;
-      border-radius: 7px;
-      border       : solid 1px $clr-blue;
+  .controls {
+    position: absolute;
+    top     : 1em;
+    right   : 1em;
+  
+    display              : grid;
+    grid-template-columns: 1fr 1fr;
+    gap                  : 1em;
+  
+    a {
+      @include padding(.25em .5em);
+      background     : darken($clr-primary, 20%);
+      color          : $clr-white;
+      border-radius  : 7px;
+      border         : solid 1px hsl(0, 0%, 95%);
+      font-weight    : $fw-l;
+      text-decoration: none;
+  
+      transition: all 125ms ease-in-out;
+  
+      &:hover {
+        background   : $clr-yellow;
+        color        : $clr-blue;
+        border-radius: 7px;
+        border       : solid 1px $clr-blue;
+      }
     }
   }
 }
+
+
 
 .navbar {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -81,6 +84,7 @@ header {
 
     &:hover {
       background: $clr-yellow;
+      color: $clr-white;
     }
   }
 }
@@ -89,88 +93,3 @@ header {
   transform: translateX(0);
 }
 
-// Toggle Hamburger Hidden on Desktop
-.toggle-label {
-  background: $clr-primary;
-
-
-  height: 4em;
-  width : 4em;
-  cursor: pointer;
-
-  display        : flex;
-  align-items    : center;
-  justify-content: center;
-
-  position: absolute;
-  top     : 0;
-  left    : 0;
-  z-index : 100;
-
-
-  span,
-  span::before,
-  span::after {
-    width        : 2em;
-    height       : 3px;
-    border-radius: 4px;
-    background   : $clr-blue;
-    ;
-    position: relative;
-  }
-
-  span::before,
-  span::after {
-    content   : '';
-    position  : absolute;
-    transform : rotate(0deg);
-    transition: transform 250ms ease;
-  }
-
-  span::before {
-    top: 10px;
-  }
-
-  span::after {
-    top: -10px;
-  }
-
-}
-
-// Hamburger
-
-// Hide checkboxes for toggles and remove from the document flow
-.toggle {
-  position: absolute;
-  top     : -999px !important;
-  left    : -9999px !important;
-}
-
-// Nav Toggle Label & Hamburger icon w/animation
-
-
-// Nav Toggle Animation
-.toggle:checked~.toggle-label {
-  filter: drop-shadow(0 2px 2px rgba($clr-blue, .15));
-
-  left: 30%;
-
-}
-
-.toggle:checked~.toggle-label span {
-  background: transparent;
-}
-
-// .nav.scroll * .nav-toggle:checked~.nav-toggle-label span {
-//   background: transparent !important;
-// }
-
-.toggle:checked~.toggle-label span::before {
-  transform: rotate(135deg);
-  top      : -0px;
-}
-
-.toggle:checked~.toggle-label span::after {
-  transform: rotate(-135deg);
-  top      : 0px;
-}
