--- a/structure/sass/default/includes/_navbar.scss
+++ b/structure/sass/default/includes/_navbar.scss
@@ -52,9 +52,10 @@ header {
   font-weight: $fw-l;
   color      : $clr-blue;
   background : $clr-white;
-  min-width  : 30%;
-  max-width  : 50%;
-  height     : 100%;
+  // min-width  : 30%;
+  width  : 50%;
+  min-height: 100%;
+  
 
   box-shadow: 2px 0 12px 5px rgba($clr-blue, .15);
 
