--- a/structure/templates/elements/review/review.html
+++ b/structure/templates/elements/review/review.html
@@ -1,6 +1,8 @@
 {# Review Element #}
 
-  <div class="element">
-       {{ element.content }}
-  </div>
 
+<div class="review">
+     <div class="reviews__content"> {{ element.content }}</div>
+
+     <div class="reviews__author"> {{ element.title }}</div>
+</div>
