beginning work on menus

--- a/structure/templates/elements/menu/menu.html
+++ b/structure/templates/elements/menu/menu.html
@@ -1,4 +1,6 @@
 {# Menu Item Element #}
-<div>
-  <strong>{{ element.settings.item }}:</strong> {{ element.title }} {{ element.settings.price }}
+<div class="item">
+  <div class="item__title">{{ element.settings.item }}:</div>
+  <div class="item__title">{{ element.title }}</div>
+  <div class="item__price">{{ element.settings.price }}</div>
 </div>
